@@ -27,11 +27,10 @@
  * @summary Introduce option to setKeepAlive parameter on CORBA sockets
  *
  * @modules java.corba/com.sun.corba.se.impl.orb java.corba/com.sun.corba.se.impl.transport
- * @compile --add-modules=java.corba KeepAliveSockets.java
- * @run main/othervm --add-modules=java.corba KeepAliveSockets
- * @run main/othervm --add-modules=java.corba -Dcom.sun.CORBA.transport.enableTcpKeepAlive KeepAliveSockets
- * @run main/othervm --add-modules=java.corba -Dcom.sun.CORBA.transport.enableTcpKeepAlive=true KeepAliveSockets
- * @run main/othervm --add-modules=java.corba -Dcom.sun.CORBA.transport.enableTcpKeepAlive=false KeepAliveSockets
+ * @run main/othervm KeepAliveSockets
+ * @run main/othervm -Dcom.sun.CORBA.transport.enableTcpKeepAlive KeepAliveSockets
+ * @run main/othervm -Dcom.sun.CORBA.transport.enableTcpKeepAlive=true KeepAliveSockets
+ * @run main/othervm -Dcom.sun.CORBA.transport.enableTcpKeepAlive=false KeepAliveSockets
  */
 
 import java.lang.*;
